Bug 958256 - Mark standard_derivatives as unsupported on Vivante drivers - r=jgilbert,snorp